--- a/hire-me.html
+++ b/hire-me.html
@@ -79,25 +79,23 @@
             <div class="col-12">
                 <h3 class="text-center">Fit before the New Year - 1 Month Challenge</h3>
                 <p>
-                    Kickstart your health transformation with our structured, step-by-step plan:
+                    Embark on a Transformative 5-Week Wellness Journey 🌟
                 </p>
-                <ul class="list-group list-group-flush">
-                    <li class="list-group-item">
-                        <strong>Week 1:</strong> Establish a healthy routine with fixed wake-up and sleep times, daily walks, timed meals, hydration, and calming box-breathing exercises.
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Week 2:</strong> Introduce a low-carb diet, intense workouts, and vagus nerve activation for improved focus and relaxation.
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Week 3:</strong> Focus on a nutrient-rich diet with proteins, fruits, and vegetables, paired with guided visualization to strengthen your mental clarity.
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Week 4:</strong> Allow recovery with a gradual reintroduction of protein and carbs, integrating all practices.
-                    </li>
-                    <li class="list-group-item">
-                        <strong>Week 5:</strong> Transition to a sustainable maintenance diet and use NLP techniques like anchoring and cleansing to solidify your progress.
-                    </li>
-                </ul>
+                <p>
+                    This program is designed to guide you through a step-by-step transformation, balancing your physical health and mental clarity. Each week introduces targeted practices to build sustainable habits and unlock your full potential.
+                </p>
+                <p>
+                    From establishing a solid foundation of healthy routines in Week 1 to transitioning to a sustainable lifestyle in Week 5, this journey integrates nutrition, fitness, mindfulness, and advanced techniques like NLP and visualization. Together, these practices empower you to embrace lasting wellness and vitality. 💪✨
+                </p>
+                <!-- Buttons Section -->
+                <div class="text-center mt-4">
+                    <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="btn btn-primary me-2" target="_blank">
+                        More Info
+                    </a>
+                    <a href="https://wa.me/919226307208" class="btn btn-success" target="_blank">
+                        Book It
+                    </a>
+                </div>
             </div>
         </div>
     </div>
