--- a/hire-me.html
+++ b/hire-me.html
@@ -64,35 +64,37 @@
             <hr class="mx-auto" style="width: 50px; height: 2px; background-color: #000;">
         </header>
         
-        <!-- Video Section -->
-        <div class="row mb-4">
-            <div class="col-12 text-center">
-                <video controls width="80%" poster="video-thumbnail.jpg">
-                    <source src="update.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
+        <!-- Video Section: Portrait Style -->
+        <div class="row justify-content-center mb-4">
+            <div class="col-12 col-md-8 col-lg-6">
+                <div class="video-container">
+                    <video controls class="w-100 rounded shadow" style="max-height: 500px; object-fit: cover;" poster="video-thumbnail.jpg">
+                        <source src="update.mp4" type="video/mp4">
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
             </div>
         </div>
         
         <!-- Challenge Section -->
         <div class="row">
             <div class="col-12">
-                <h3 class="text-center">Fit before the New Year - 1 Month Challenge</h3>
-                <p>
+                <h3 class="text-center mb-3">Fit before the New Year - 1 Month Challenge</h3>
+                <p class="text-center mb-4">
                     Embark on a Transformative 5-Week Wellness Journey 🌟
                 </p>
-                <p>
+                <p class="text-center mb-4">
                     This program is designed to guide you through a step-by-step transformation, balancing your physical health and mental clarity. Each week introduces targeted practices to build sustainable habits and unlock your full potential.
                 </p>
-                <p>
+                <p class="text-center mb-4">
                     From establishing a solid foundation of healthy routines in Week 1 to transitioning to a sustainable lifestyle in Week 5, this journey integrates nutrition, fitness, mindfulness, and advanced techniques like NLP and visualization. Together, these practices empower you to embrace lasting wellness and vitality. 💪✨
                 </p>
                 <!-- Buttons Section -->
                 <div class="text-center mt-4">
-                    <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="btn btn-primary me-2" target="_blank">
+                    <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="btn btn-primary me-2" target="_blank" rel="noopener noreferrer">
                         More Info
                     </a>
-                    <a href="https://wa.me/919226307208" class="btn btn-success" target="_blank">
+                    <a href="https://wa.me/919226307208" class="btn btn-success" target="_blank" rel="noopener noreferrer">
                         Book It
                     </a>
                 </div>
@@ -100,6 +102,7 @@
         </div>
     </div>
 </section>
+
 
       <header>
         <h1 class="articles-header">Our Plans</h1>
