--- a/hire-me.html
+++ b/hire-me.html
@@ -64,11 +64,11 @@
             <hr class="mx-auto" style="width: 50px; height: 2px; background-color: #000;">
         </header>
         
-        <!-- Video Section: Portrait Style -->
+        <!-- Video Section: Vertical Portrait Video -->
         <div class="row justify-content-center mb-4">
-            <div class="col-12 col-md-8 col-lg-6">
+            <div class="col-12 col-md-6 col-lg-4">
                 <div class="video-container">
-                    <video controls class="w-100 rounded shadow" style="max-height: 500px; object-fit: cover;" poster="video-thumbnail.jpg">
+                    <video controls class="w-100 rounded shadow" style="max-height: 80vh; object-fit: contain; height: auto; max-width: 100%;">
                         <source src="update.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
@@ -102,6 +102,7 @@
         </div>
     </div>
 </section>
+
 
 
       <header>
