--- a/hire-me.html
+++ b/hire-me.html
@@ -129,6 +129,16 @@
             </div>
           </div>
         </div>
+ <div class="col-sm-4">
+          <div class="card card text-center">
+            <h5 class="card-header">Plan 3</h5>
+            <div class="card-body">
+              <h5 class="card-title">Weight Gain Plan</h5>
+              <p class="card-text">An optimized plan to gain healthy weight avoiding the fats.</p>
+              <a href="https://drive.google.com/file/d/12Uj77rlOBXhbw-1E06BvR_SY1mdBw0Nn/view?usp=sharing" class="button-main">Learn more</a>
+            </div>
+          </div>
+        </div>
       </div>
     </main>
 
