--- a/hire-me.html
+++ b/hire-me.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -57,7 +58,7 @@
     <main class="hire-me-main">
   <img src="food.jpg" alt="picture of one of authors dishes" srcset="" class="about-me-food"><br><br>
 
-  <section class="updates-widget mt-5">
+<section class="updates-widget mt-5">
     <div class="container">
         <header class="text-center mb-4">
             <h2 class="updates-header">Updates</h2>
@@ -91,7 +92,7 @@
                 </p>
                 <!-- Buttons Section -->
                 <div class="text-center mt-4">
-                    <a href="https://drive.google.com/file/d/18fk88y3yKLWMN1JD4n6E9skw3phkhZO5/view?usp=sharing" class="btn btn-primary me-2" target="_blank" rel="noopener noreferrer">
+                    <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="btn btn-primary me-2" target="_blank" rel="noopener noreferrer">
                         More Info
                     </a>
                     <a href="https://wa.me/919226307208" class="btn btn-success" target="_blank" rel="noopener noreferrer">
@@ -105,37 +106,38 @@
 
 
 
+
       <header>
         <h1 class="articles-header">Our Plans</h1>
       </header>
-      
+      <div class="row hire-me-options">
+        <div class="col-sm-4">
+          <div class="card card text-center">
+            <h5 class="card-header">Plan 1</h5>
+            <div class="card-body">
+              <h5 class="card-title">1 Month Plan</h5>
+              <p class="card-text">A quick, personalized plan to jumpstart your health goals.</p>
+              <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
+            </div>
+          </div>
+        </div>
         <div class="col-sm-4">
           <div class="card text-center">
-            <h5 class="card-header">Plan 1</h5>
+            <h5 class="card-header">Plan 2</h5>
             <div class="card-body">
               <h5 class="card-title">3 Months Plan</h5>
               <p class="card-text">A balanced approach for steady progress and lasting change.</p>
-              <a href="https://drive.google.com/file/d/1oG37xiPhs9wcm4pIkAsFrqnoOHE98UxX/view?usp=sharing" class="button-main">Learn more</a>
+              <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4">
           <div class="card card text-center">
-            <h5 class="card-header">Plan 2</h5>
+            <h5 class="card-header">Plan 3</h5>
             <div class="card-body">
               <h5 class="card-title">6 Months Plan</h5>
               <p class="card-text">A long-term plan for sustained results and lifestyle transformation.</p>
-              <a href="https://drive.google.com/file/d/12Uj77rlOBXhbw-1E06BvR_SY1mdBw0Nn/view?usp=sharing" class="button-main">Learn more</a>
-            </div>
-          </div>
-        </div>
- <div class="col-sm-4">
-          <div class="card card text-center">
-            <h5 class="card-header">Plan 3</h5>
-            <div class="card-body">
-              <h5 class="card-title">Weight Gain Plan</h5>
-              <p class="card-text">An optimized plan to gain healthy weight avoiding the fats.</p>
-              <a href="https://drive.google.com/file/d/12Uj77rlOBXhbw-1E06BvR_SY1mdBw0Nn/view?usp=sharing" class="button-main">Learn more</a>
+              <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
             </div>
           </div>
         </div>
@@ -189,5 +191,3 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pzjw8f+ua7Kw1TIqFv8sjGBbvDkCkJg9Am1j5RrgrVVNjl1QlmKT8jrJRMzDvrj3" crossorigin="anonymous"></script>
 </body>
 </html>
-
-
