--- a/about.html
+++ b/about.html
@@ -93,7 +93,7 @@
         <div class="footer-links">
             <a href="hire-me.html">Workspace</a>
             <a href="about.html">About Us</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </div>
 
         <!-- Social Icons -->
