--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
         <div class="footer-links">
             <a href="hire-me.html">Workspace</a>
             <a href="about.html">About Us</a>
-            <a href="contact.html">Contact</a>
+            <a href="contact.html">Contact Us</a>
         </div>
         <div class="footer-icons">
             <a href="https://www.instagram.com/braintobody_?igsh=bjJsdng2am1tZWll" target="_blank" title="Follow us on Instagram">
