--- a/hire-me.html
+++ b/hire-me.html
@@ -115,8 +115,8 @@
           <div class="card card text-center">
             <h5 class="card-header">Plan 1</h5>
             <div class="card-body">
-              <h5 class="card-title">Weight Gain Plan</h5>
-              <p class="card-text">An optimized plan for diet management to gain healthy weight.</p>
+              <h5 class="card-title">Diet Management Plan</h5>
+              <p class="card-text">An optimized plan for diet management to gain/maintain healthy weight.</p>
               <a href="https://drive.google.com/file/d/1cnf09IWt4OarxZpwDxfM6xC7817LLJWU/view?usp=sharing" class="button-main">Learn more</a>
             </div>
           </div>
